Restored pom.xml values in master that was inadvertently removed in branch
BMS-1432